# origin

Advanced_C++_Programming/Under_the_hood:compilation&linking/: Task1
Building_and_Connecting_libraries/Task1_Static_library/: greeter.cpp  greeter.h  main  main.cpp
Building_and_Connecting_libraries/Task2_Dynamic_library/: farewellApp  leaver.cpp  leaver.h  main.cpp
Building_and_Connecting_libraries/Task3_CMake_dynamic_library/: CMakeLists.txt  leaver.cpp  leaver.h  main.cpp
Building_and_Connecting_libraries/Task5_Class_hierarchy_DLL_and_CMake/: CMakeLists.txt  equilateralTriangle.cpp  figure.cpp  main.cpp  parallelogram.cpp  quadrangle.cpp  rectangle.cpp  rhombus.cpp  rhombus.h  rightTriangle.h  square.cpp  triangle.cpp
CMake/Task1/my_first_cmake_project/: CMakeLists.txt  main.cpp
CMake/Task2/more_complex_cmake_project/: CMakeLists.txt  equilateralTriangle.h  isoscelesTriangle.cpp  parallelogram.h  quadrangle.h  rightTriangle.cpp  square.h  triangle.h
Exceptions_and_Error_Handling/Task1/: main.cpp
Exceptions_and_Error_Handling/Task2/: equilateralTriangle.cpp  exGeomFigError.h  figure.h  isoscelesTriangle.cpp  isoscelesTriangle.h  main.cpp  parallelogram.cpp  quadrangle.cpp  rectangle.cpp  rectangle.h  rhombus.cpp  rightTriangle.cpp  rightTriangle.h  square.cpp  triangle.cpp
Operator_overloading/Task1/: main  main.cpp
Operator_overloading/Task2/: main.cpp
projects/: CMakeLists.txt
projects/racing_simulator/: CMakeLists.txt  air.cpp  air.h  all_terrain_boots.h  centaur.cpp  eagle.h  fast_camel.h  ground.h  main.cpp  vehicle.h
projects/racing_simulator/vehicle/: CMakeLists.txt  vehicle.cpp
projects/racing_simulator/vehicle/air/: CMakeLists.txt  air.h  broom.cpp  broom.h  eagle.cpp  magic_carpet.cpp  magic_carpet.h
projects/racing_simulator/vehicle/ground/: CMakeLists.txt  all_terrain_boots.cpp  camel.cpp  camel.h  centaur.h  fast_camel.cpp  ground.cpp  ground.h
